Set z-index for CollaborateMenu to ensure that the collaboration div always appears on top of the editor

--- a/frontend/src/styles/CollaborateMenu.css
+++ b/frontend/src/styles/CollaborateMenu.css
@@ -8,6 +8,7 @@
     border-style: solid;
     background-color: rgb(40, 42, 54);
     padding: 10px 10px 10px 10px;
+    z-index: 10;
 }
 
 .CollaborateMenu > span {
